# domu-backend

./: .env.example  .gitignore  ARQUITECTURA_BACKEND.md  EMAIL_TEMPLATES.md  README.md  TESTING.md  build.gradle.kts  pom.xml  pyproject.toml  run  run.sh  settings.gradle.kts
.gradle-local/caches/8.14.3/cc-keystore/: cache.properties  gradle.keystore
.gradle-local/caches/journal-1/: file-access.properties
app/: build.gradle.kts
app/src/main/resources/: simplelogger.properties
gradle/: libs.versions.toml
main/src/app/: __init__.py  main.py
main/src/app/api/: __init__.py
main/src/app/api/routes/: __init__.py  health.py
main/src/app/core/: __init__.py  config.py
main/src/app/domain/: __init__.py
main/src/app/domain/models/: __init__.py  health.py
main/src/app/infrastructure/: __init__.py  logging.py
main/src/app/services/: __init__.py  health_service.py
main/tests/: test_health.py
src/main/java/com/domu/: Main.java
src/main/resources/: application.properties  log4j2.xml
src/main/resources/db/migration/: V001__create_auth_schema.sql  V003__common_expenses.sql  V004__building_requests.sql  V005__visits.sql  V006__incidents.sql  (+28 more)
src/main/resources/migrations/: 002_update_auth_schema.sql  004_building_requests.sql  006_incidents.sql  010_building_request_nullable_requester.sql  014_amenities.sql  017_incident_enhancements.sql  018_user_confirmation.sql  028_gcs_migration.sql
src/main/resources/templates/: building-request-approval.html  building-request-approved.html  building-request-rejected.html  building-request-user-confirmation.html
(+629 files in other folders)
